syntax = "proto3";
package clock;

service Clock {
    rpc SayHello (HelloRequest) returns (HelloReply);

    rpc SayHelloAgain (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}